--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "@reach/dialog": "0.15.0",
     "date-fns": "2.16.1",
+    "radix-ui": "^1.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-feather": "2.0.9",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "5.2.1"
   },
   "scripts": {
